-
Bug
-
Resolution: Done
-
P2: Important
-
5.13.0
-
None
-
9680828ac40d6e10eac02f4981f3668669409acf
We probably need to support persistent preferences instead of keeping preferences mainly in memory.
We already hack this for the developer tools to not show the user a welcome update help every time it is opened, and the devtool preferences could be merged with main preferences if they were stored.
We could consider storing settings of on-disk profiles using preferences as well (though it would probably need to be off by default for behavior compatibility).
Finally we need this for persistent capture device ids, and capture device preferences.
- is required for
-
QTBUG-68448 Getting devices from webrtc always returns different ids
-
- Closed
-
-
QTBUG-70077 QtWebEngine should provide a list of capture devices
-
- Closed
-
- relates to
-
QTBUG-60778 Ability to set Chromium managed settings
-
- Open
-